GEOT-3368
git-svn-id: http://svn.osgeo.org/geotools/trunk@36422 e5c1c795-43da-0310-a71f-fac65c449510